# layout_overlay

./: LICENSE.md  README.md  layer_switch_qmk_example.c  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
src/: App.vue  appLayouts.ts  array.ts  boardLayout.ts  constants.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: event_loop.rs  main.rs  window_focus.rs
src/components/: BoardLayout.vue  KeyLabelRow.vue  LayoutKey.vue  LayoutLayer.vue
