[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/SecretPocketCat/tauri", features = [
    "api-all",
    "system-tray",
] }
window-vibrancy = "0.3.2"
hidapi = "2.3.3"
windows-win = "2.4.1"
winapi = { version = "0.3.9", features = [
    "winuser",
    "errhandlingapi",
    "processthreadsapi",
    "dbt",
    "hidclass",
    "usbiodef",
] }
once_cell = "1.17.2"
crossbeam = "0.8.2"
windows = "0.48.0"
throttle = "0.1.0"
regex = "1.8.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
